--- a/form.ui
+++ b/form.ui
@@ -31,7 +31,7 @@
            <item row="1" column="0">
             <widget class="QTextEdit" name="tedit_global_log">
              <property name="enabled">
-              <bool>false</bool>
+              <bool>true</bool>
              </property>
              <property name="sizePolicy">
               <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -55,6 +55,9 @@
              </property>
              <property name="lineWidth">
               <number>0</number>
+             </property>
+             <property name="readOnly">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
