--- a/form.ui
+++ b/form.ui
@@ -122,6 +122,12 @@
              <property name="enabled">
               <bool>false</bool>
              </property>
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="maximum">
+              <double>1000.000000000000000</double>
+             </property>
             </widget>
            </item>
            <item row="3" column="2">
@@ -198,6 +204,12 @@
             <widget class="QDoubleSpinBox" name="dsbox_dist_to_trans_deform">
              <property name="enabled">
               <bool>false</bool>
+             </property>
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="maximum">
+              <double>1000.000000000000000</double>
              </property>
             </widget>
            </item>
@@ -279,6 +291,12 @@
                <pointsize>12</pointsize>
               </font>
              </property>
+             <property name="decimals">
+              <number>3</number>
+             </property>
+             <property name="maximum">
+              <double>1000.000000000000000</double>
+             </property>
             </widget>
            </item>
            <item row="6" column="0">
@@ -306,6 +324,9 @@
              </property>
              <property name="decimals">
               <number>3</number>
+             </property>
+             <property name="maximum">
+              <double>1000.000000000000000</double>
              </property>
             </widget>
            </item>
@@ -433,6 +454,13 @@
             <widget class="QLabel" name="label_units_total_deform">
              <property name="text">
               <string>мкε</string>
+             </property>
+            </widget>
+           </item>
+           <item row="8" column="2">
+            <widget class="QPushButton" name="pbutton_save_file">
+             <property name="text">
+              <string>Сохранить файл</string>
              </property>
             </widget>
            </item>
